# Qt-Firebase-Client

./: CMakeLists.txt  GoogleService-Info.plist  README.md  build.bat  main.cpp
tripartite/firebase/include/firebase/: version.h
